# DoorEntrySystem

./: README.md
Database/: dump.sql
DoorSideSystem/: .classpath  .project
DoorSideSystem/src/: Request.java
DoorSideSystem/src/doorServer/: ConnectionListener.java  Criteria.java  DoorReply.java  DoorRequest.java  Main.java  Person.java  RequestListener.java  RequestSender.java  SQLParser.java  SQLParserTest.java
DoorSideSystem/src/loginAppServer/: BCrypt.java  LoginConnectionHandler.java  LoginHandler.java  LoginSQLParser.java  LoginTester.java  PersonInfo.java  User.java  UserAdder.java  UserCreator.java
StrathDoorSystem/app/: build.gradle  proguard-rules.pro
StrathDoorSystem/app/src/main/: AndroidManifest.xml
StrathDoorSystem/app/src/main/res/layout/: activity_login.xml  activity_nfc.xml  toast.xml
StrathDoorSystem/app/src/main/res/values/: colors.xml  (+1 more)
source/: CMakeLists.txt  main.c
source/NxpRdLib_PublicRelease/comps/phCardEmu/: phCardEmu.c
source/NxpRdLib_PublicRelease/comps/phOsal/src/: phOsal.c
source/NxpRdLib_PublicRelease/comps/phOsal/src/RaspberryPi/: phOsal_R_Pi.c  phOsal_R_Pi.h
source/NxpRdLib_PublicRelease/comps/phbalReg/src/: phbalReg.c
source/NxpRdLib_PublicRelease/comps/phbalReg/src/Stub/: phbalReg_Stub.c  phbalReg_Stub.h
source/NxpRdLib_PublicRelease/comps/phceT2TCmdHdl/src/Sw/: phceT2T_Const.c  phceT2T_Sw.c
source/NxpRdLib_PublicRelease/comps/phhalHw/src/Pn512/: phhalHw_Pn512_Int.c
source/NxpRdLib_PublicRelease/intfs/: phbalReg.h
source/NxpRdLib_PublicRelease/types/: ph_NxpBuild.h
source/utils/: client.c  client.h
(+5 files in other folders)
